--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,7 @@ img {
 /*section B*/
 .section-b {
   position: relative;
-  background: url("https://i.ibb.co/1RS1dqC/section-b.jpg") no-repeat bottom
-    center/cover;
+  background: url("https://i.ibb.co/1RS1dqC/section-b.jpg") no-repeat bottom center/cover;
   height: 600px;
 }
 
@@ -142,8 +141,8 @@ img {
 .section-c .gallery a:first-child {
   /* grid-row-start: 1;
   grid-row-end: 3; */
-  grid-row-start: 1/3;
-  grid-column-end: 1/3;
+  grid-row: 1/3;
+  grid-column: 1/3;
 }
 
 .section-c .gallery a:nth-child(2) {
@@ -184,7 +183,7 @@ img {
   color: #ccc;
 }
 
-.section-footer a > i {
+.section-footer a>i {
   color: #555;
   margin-right: 0.5rem;
 }
@@ -216,7 +215,7 @@ img {
 }
 
 .email-form .submit {
-  display: inline-block ;
+  display: inline-block;
   position: absolute;
   top: 0;
   right: 0;
@@ -233,6 +232,7 @@ img {
   cursor: pointer;
   border-radius: 0 20px 20px 0;
 }
+
 /* utilities */
 .btn {
   display: inline-block;
@@ -253,8 +253,8 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100;
-  width: 100;
+  height: 100%;
+  width: 100%;
   background-color: var(--overaly-color);
 }
 
@@ -274,15 +274,15 @@ img {
   }
 
   .section-a img {
-     width: 80%;
-     margin: auto;
+    width: 80%;
+    margin: auto;
   }
 
   .section-b-inner h2 {
     font-size: 3.5rem;
   }
 
-  .section-c .gallery{
+  .section-c .gallery {
     grid-template-columns: repeat(3 .1fr);
   }
 
@@ -291,7 +291,7 @@ img {
     grid-column: 1/1;
   }
 
-  .section-c .gallery a:nth-child(2){
+  .section-c .gallery a:nth-child(2) {
     grid-row: 2/2;
     grid-column: 2/4;
   }
@@ -304,13 +304,12 @@ img {
     padding: 2rem 0;
   }
 
-  .section-footer .container{
+  .section-footer .container {
     grid-template-columns: 1fr;
     text-align: center;
   }
 
-  .section-footer div:nth-child(2) ,
+  .section-footer div:nth-child(2),
   .section-footer div:nth-child(3) {
     display: none;
   }
-
